# mlang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  grammar.md
source/: CMakeLists.txt  command.cpp  command.h  interpreter.cpp  interpreter.h  main.cpp  parser.y  parser_handler.cpp  scanner.h  scanner.l
source/src/: ast.cpp  ast.hpp  command.cpp  parser.y  parser_handler.cpp  parser_handler.h  parser_handler.hpp  scanner.l
source/test/: testCase.cpp
source/test/unit_test/parser_layer/: CMakeLists.txt
src/: ast.cpp  ast.hpp  main.cpp  parser.y  parser_handler.cpp  parser_handler.hpp  scanner.hpp  scanner.l
src/parser_layer/: ast.hpp  parser_handler.cpp  parser_handler.hpp
step_1/: CMakeLists.txt
step_1/src/: ast.cpp  ast.hpp  main.cpp  parser.y  parser_handler.cpp  parser_handler.hpp  scanner.l
step_1/test/unit_test/parser_layer/: basic_parsing.cpp
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
test/unit_test/parser_layer/: CMakeLists.txt  basic_parsing.cpp  parsing_rules.cpp
v0/: CMakeLists.txt  README  grammar  nextcmake
v0/cmake_modules/: FindCPPUNIT.cmake
v0/doc/: project_management.txt
v0/src/: CMakeLists.txt  main.cpp
v0/src/framework/: CMakeLists.txt  basicTypes.hpp  log.cpp  log.hpp
v0/src/framework/datatypes/: Counter.cpp  Counter.hpp
v0/src/framework/include/: log.hpp
v0/src/lexer/: CMakeLists.txt  lex.cpp  lex.hpp
v0/src/lol/: lex.cpp  lex.hpp
v0/test/: CMakeLists.txt
v0/test/unit_test/: CMakeLists.txt  mainTest.cpp
v0/test/unit_test/framework/: CMakeLists.txt  mainTest.cpp  test.cpp  test.hpp
v0/test/unit_test/framework/datatypes/: testCounter.cpp  testCounter.hpp
v0/test/unit_test/lexer/: CMakeLists.txt  testKeyword.cpp  testKeyword.hpp
